force-app/main/default/objects/Group__c/Group__c.object-meta.xml
<CustomObject>
    <label>EAN Working Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EAN Working Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>