force-app/main/default/objects/Group__c/fields/calendar_id__c.field-meta.xml
<CustomField>
    <fullName>calendar_id__c</fullName>
    <label>calendar_id</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>