force-app/main/default/objects/Group__c/fields/Chatter_Group_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_Accessibility__c</fullName>
    <label>Chatter Group Accessibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Unlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>