force-app/main/default/objects/Group__c/fields/Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_Id__c</fullName>
    <label>Chatter Group Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>