force-app/main/default/objects/Group__c/fields/Count_Co_Editor_in_Chief__c.field-meta.xml
<CustomField>
    <fullName>Count_Co_Editor_in_Chief__c</fullName>
    <label>Count Co Editor in Chief</label>
    <summaryFilterItems>
        <field>GroupChatterGroupAssotiation__c.Role__c</field>
        <operation>equals</operation>
        <value>Co-editor-in-chief</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupChatterGroupAssotiation__c.Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>