force-app/main/default/objects/Group__c/fields/Count_Education_Committee_Chair__c.field-meta.xml
<CustomField>
    <fullName>Count_Education_Committee_Chair__c</fullName>
    <label>Count Education Committee Chair</label>
    <summaryFilterItems>
        <field>GroupChatterGroupAssotiation__c.Role__c</field>
        <operation>equals</operation>
        <value>Chair Education Committee</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupChatterGroupAssotiation__c.Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>