force-app/main/default/objects/Group__c/fields/Count_Past_President__c.field-meta.xml
<CustomField>
    <fullName>Count_Past_President__c</fullName>
    <label>Count Past President</label>
    <summaryFilterItems>
        <field>GroupChatterGroupAssotiation__c.Role__c</field>
        <operation>equals</operation>
        <value>Past president</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupChatterGroupAssotiation__c.Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>