force-app/main/default/objects/Group__c/fields/daymessage__c.field-meta.xml
<CustomField>
    <fullName>daymessage__c</fullName>
    <label>daymessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>