force-app/main/default/objects/Group__c/fields/ddinfo__c.field-meta.xml
<CustomField>
    <fullName>ddinfo__c</fullName>
    <label>ddinfo</label>
    <length>65535</length>
    <type>LongTextArea</type>
</CustomField>