force-app/main/default/objects/Group__c/fields/Enable_management_group__c.field-meta.xml
<CustomField>
    <fullName>Enable_management_group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox fire trigger which create chatter group for management group members.</description>
    <label>Enable management group</label>
    <type>Checkbox</type>
</CustomField>