force-app/main/default/objects/Group__c/fields/Enable_synchronization__c.field-meta.xml
<CustomField>
    <fullName>Enable_synchronization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field enables synchronization Group with Chatter Group</description>
    <label>Enable synchronization</label>
    <type>Checkbox</type>
</CustomField>