force-app/main/default/objects/Group__c/fields/humhub_space__c.field-meta.xml
<CustomField>
    <fullName>humhub_space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>humhub_space</label>
    <type>Checkbox</type>
</CustomField>