force-app/main/default/objects/Group__c/fields/humhub_space_cancelable__c.field-meta.xml
<CustomField>
    <fullName>humhub_space_cancelable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>humhub_space_cancelable</label>
    <type>Checkbox</type>
</CustomField>