force-app/main/default/objects/Group__c/fields/Management_Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Management_Chatter_Group_Id__c</fullName>
    <label>Management Chatter Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>