force-app/main/default/objects/Group__c/fields/MG_Chatter_Group_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>MG_Chatter_Group_Accessibility__c</fullName>
    <label>MG Chatter Group Accessibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlisted</fullName>
                <default>true</default>
                <label>Unlisted</label>
            </value>
            <value>
                <fullName>Private</fullName>
                <isActive>false</isActive>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
                <isActive>false</isActive>
                <label>Public</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>