force-app/main/default/objects/Group__c/fields/old_container_id__c.field-meta.xml
<CustomField>
    <fullName>old_container_id__c</fullName>
    <label>old_container_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>