force-app/main/default/objects/Group__c/fields/tx_efnsusr_type_id__c.field-meta.xml
<CustomField>
    <fullName>tx_efnsusr_type_id__c</fullName>
    <label>tx_efnsusr_type_id</label>
    <length>11</length>
    <type>Text</type>
</CustomField>