force-app/main/default/objects/Group__c/fields/tx_efnsusr_type_name__c.field-meta.xml
<CustomField>
    <fullName>tx_efnsusr_type_name__c</fullName>
    <label>tx_efnsusr_type_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>