force-app/main/default/objects/Group__c/fields/Type_of_Group__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Group__c</fullName>
    <label>Type of Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sub-committee</fullName>
            </value>
            <value>
                <fullName>Task Force</fullName>
            </value>
            <value>
                <fullName>Scientific Panels</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Scientific Panel</fullName>
                <isActive>false</isActive>
                <label>Scientific Panel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>