force-app/main/default/objects/Group__c/fields/use_in_netkey_committee_rule__c.field-meta.xml
<CustomField>
    <fullName>use_in_netkey_committee_rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>use_in_netkey_committee_rule</label>
    <type>Checkbox</type>
</CustomField>