force-app/main/default/objects/Group__c/recordTypes/Assembly_of_delegates.recordType-meta.xml
<RecordType>
    <fullName>Assembly_of_delegates</fullName>
    <active>true</active>
    <label>Assembly of delegates</label>
</RecordType>