force-app/main/default/objects/Group__c/recordTypes/Level_1_Board_EAN_Board.recordType-meta.xml
<RecordType>
    <fullName>Level_1_Board_EAN_Board</fullName>
    <active>true</active>
    <label>Level 1 Board (EAN Board)</label>
</RecordType>