force-app/main/default/objects/Group__c/recordTypes/Panel_Management_Group.recordType-meta.xml
<RecordType>
    <fullName>Panel_Management_Group</fullName>
    <active>true</active>
    <label>Panel Management Group</label>
</RecordType>