force-app/main/default/objects/Group__c/validationRules/Unlisted_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Unlisted_validation</fullName>
    <active>false</active>
    <errorConditionFormula>$Profile.Name  = &quot;Member Community User Profile&quot;  &amp;&amp;   ISPICKVAL( Chatter_Group_Accessibility__c , &quot;Unlisted&quot;)</errorConditionFormula>
    <errorMessage>Community users can&apos;t create unlisted groups.</errorMessage>
</ValidationRule>