force-app/main/default/objects/Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>tx_efnsusr_type_name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>deleted__c</columns>
    <columns>Type_of_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>deleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All non-deleted Groups</label>
</ListView>