force-app/main/default/objects/Group__c/listViews/Level_2_Working_Groups.listView-meta.xml
<ListView>
    <fullName>Level_2_Working_Groups</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Group__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Enable_synchronization__c</columns>
    <columns>Chatter_Group_Accessibility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Group__c.Level_2_Working_Group_Committee</value>
    </filters>
    <label>Level 2 Working Groups</label>
</ListView>